# Galileo

./: .gitignore  README.md  app.py  knowledge_base.json  pyproject.toml  requirements.txt  trinity_dizzy.py
article/: IMAGE-PROMPTS.md  PUBLISH-RUNBOOK.md  gen-images.mjs  image-prompts.json  linkedin-post.md  medium-full.html  medium-full.md  x-thread.md
article/results/: baseline.txt  diagnosis.md  metric_scores.json  real-metrics-galileo.md  real-metrics.md  xl1.txt  xl2.txt  xl3.txt  xl4.txt  xl4b.txt  xl5.txt  xl6.txt
corpus/: STATS.md  generate_ml_corpus.py  ml_platform_kb.json
dizzygraph/: README.md  __init__.py  callbacks.py  checkpoint.py  compile.py  edges.py  events.py  executor.py  fail_policy.py  graph.py  interrupt.py  meta.py  nodes.py  otel.py  persist.py  reducers.py  retry.py  state.py  viz.py
dizzygraph/control/: GOALS.md  __init__.py  __main__.py  admission.py  alerts.py  api.py  auth.py  bus.py  demo_graph.py  postgres_store.py  protocol.py  runtime.py  sqlite_checkpointer.py  store.py  supervisor.py  tenant_projects.py  trinity_fleet.py  xl_fanout.py
docs/: GALILEO-DIZZYGRAPH-USE-CASES.md  OTEL-DEPLOYMENT.md  RUNBOOK-DIZZYGRAPH.md  RUNBOOK-MULTI-WORKER.md  index.html
drills/: xl1_process_dead.py  xl2_poisoned_retriever.py  xl3_langgraph_misroute.py  xl4_eval_to_protect.py  xl4b_out_of_scope.py  xl5_slow_tool.py  xl6_model_regression.py
examples/: demo_agent.py  demo_hitl.py  demo_refinement.py
fleet/: monitor.py
tests/: test_control_plane.py  test_corpus_scale.py  test_dizzygraph.py  test_otel_config.py  test_trinity_use_cases.py
(+26 files in other folders)
