[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dizzygraph"
version = "0.4.1"
description = "Graphs made of loops — multi-agent control plane with Postgres/Redis, metrics, supervisor"
readme = "dizzygraph/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abhinav Pandey" }]
keywords = ["agents", "graphs", "loops", "langgraph", "orchestration", "fleet"]
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
viz = ["networkx>=3.0", "matplotlib>=3.8"]
control = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "httpx>=0.27"]
control-pg = ["psycopg[binary]>=3.1"]
control-redis = ["redis>=5.0"]
control-full = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
  "redis>=5.0",
]
otel = [
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "galileo[otel]>=2.3.0",
]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
dizzygraph-control = "dizzygraph.control.__main__:main"

[tool.setuptools.packages.find]
include = ["dizzygraph*"]

[tool.setuptools.package-data]
dizzygraph = ["control/static/*", "control/GOALS.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
